--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "firebase": "^9.6.7",
+    "firebaseui": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
     "moment": "^2.29.1",
