--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -29,6 +30,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -36,6 +38,7 @@
     "@types/knex": "^0.16.1",
     "@types/node": "^17.0.18",
     "@types/nodemailer": "^6.4.4",
+    "generate-password-ts": "^1.6.3",
     "ts-node-dev": "^1.1.8"
   }
 }
