--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.19.0",
     "firebaseui": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
