--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "migrations-populate": "tsc && node ./build/data/migrations.js",
-    "dev": "ts-node-dev ./src/index.ts",
+    "dev": "ts-node ./src/index.ts",
     "start": "tsc && node ./build/index.js",
     "build": "clear && echo \"Transpiling files...\" && tsc && echo \"Done!\" ",
     "test": "jest"
@@ -28,7 +28,8 @@
     "knex": "^1.0.3",
     "moment": "^2.29.1",
     "nodemailer": "^6.7.2",
-    "typescript": "^4.5.5",
+  
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node": "^17.0.18",
     "@types/nodemailer": "^6.4.4",
     "generate-password-ts": "^1.6.3",
+    "ts-node": "^10.8.2",
     "ts-node-dev": "^1.1.8"
   }
 }
