--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrations-populate": "tsc && node ./build/data/migrations.js",
     "dev": "ts-node ./src/index.ts",
     "start": "tsc && node ./build/index.js",
     "build": "clear && echo \"Transpiling files...\" && tsc && echo \"Done!\" ",
@@ -14,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^28.1.6",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
@@ -24,11 +24,12 @@
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.19.0",
     "firebaseui": "^6.0.0",
+    "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
     "moment": "^2.29.1",
     "nodemailer": "^6.7.2",
-  
+    "ts-jest": "^28.0.7",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
