--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node ./src/index.ts",
+    "dev": "ts-node-dev ./src/index.ts",
     "start": "tsc && node ./build/index.js",
     "build": "clear && echo \"Transpiling files...\" && tsc && echo \"Done!\" ",
     "test": "jest"
@@ -16,34 +16,25 @@
     "@types/jest": "^28.1.6",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.1",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "firebase": "^9.6.7",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.19.0",
-    "firebaseui": "^6.0.0",
     "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^1.0.3",
     "moment": "^2.29.1",
     "nodemailer": "^6.7.2",
     "ts-jest": "^28.0.7",
     "typescript": "^4.6.3",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
+    "uuid": "^8.3.2",
     "@types/axios": "^0.14.0",
-    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/knex": "^0.16.1",
     "@types/node": "^17.0.18",
     "@types/nodemailer": "^6.4.4",
     "generate-password-ts": "^1.6.3",
-    "ts-node": "^10.8.2",
-    "ts-node-dev": "^1.1.8"
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
