--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "start": "tsc && node ./build/src/index.js",
+    "start": "node ./build/src/index.js",
     "build": "tsc",
     "test": "jest"
   },
@@ -28,6 +28,7 @@
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "firebase-admin": "^10.0.2",
@@ -42,5 +43,4 @@
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   }
-
 }
