--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "firebase": "^9.16.0",
     "firebase-admin": "^10.0.2",
     "generate-password-ts": "^1.6.3",
     "jest": "^28.1.3",
