--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ts-node": "^8.10.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.22.2"
   }
 }
