--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "dev": "ts-node-dev ./src/index.ts",
     "start": "node ./build/src/index.js",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collect-coverage",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -28,18 +32,21 @@
     "uuid": "^8.3.2",
     "zod": "^3.22.2"
   },
-  "devDependencies": { 
-    "typescript": "^4.6.3",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "^2.0.0",
-    "jest": "^28.1.3",
+  "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.18",
     "@types/nodemailer": "^6.4.4",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.6.3"
   }
 }
