--- a/.eslintrc
+++ b/.eslintrc
@@ -11,13 +11,14 @@
     ],
     "rules": { 
         "@typescript-eslint/no-explicit-any": "warn",
-        "indent": ["warn", 2],
+        "@typescript-eslint/no-unused-vars": "warn",
+        "prefer-const":"warn",
+        "indent": ["warn", 4],
         "linebreak-style": ["warn", "unix"],
         "semi":[0, "always"],
         "no-duplicate-case": "error",
         "no-unreachable": "warn",
         "for-direction": "error",
-        "no-control-regex": "error",
         "no-dupe-else-if": "error",
         "no-empty-pattern": "error",
         "no-invalid-regexp": "error",
