--- a/package.json
+++ b/package.json
@@ -33,17 +33,21 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.18",
     "@types/nodemailer": "^6.4.4",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "axios": "^1.5.0",
     "eslint": "^8.48.0",
     "jest": "^28.1.3",
+    "supertest": "^6.3.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^2.0.0",
